# noriweb-hakyll

./: .gitignore  LICENSE.md  README.md  blog.html  contact.html  full-rebuild-and-view.sh  hakyll-site.cabal  index.html  media.css  media.html  media.md  nginx-redirects.conf  noriweb-hakyll.cabal  photos.html  profile.html  repertoire.md  reviews.md  robots.txt  site.hs  stack.yaml
.github/workflows/: deploy-website.yml  release-build-image.yml
blog/2014/: nori-mail-1.md
blog/2015/: 121917.md  belgium.md  c-after-cathy-.md  concert.md  gendai-ongaku.md  homepage.md  justmusic.md  sirga-international-music-festival.md  volunder-construction.md  workshop.md
blog/2016/: 150.md  150ans.md  concertoizumi.md  concertsatie.md  trio.md  vol6.md
blog/2017/: 212.md  45yakukaku-spiral.md  europe.md  facebook.md  g-clef.md  operaacademy.md  widmann.md
blog/2018/: cd-italia-naxos.md  ictus.md
blog/2019/: 20182019.md  782.md  783.md  concer.md
blog/2020/: concert6.md  corona.md  online.md  pub-i-g-aperghis-i-g.md
blog/2021/: 1-623.md  2-711.md  2020.md  3-728.md  koe-recital-vol2.md  repertory.md
blog/2022/: hooglied.md
blog/2023/: test.md
media/: media.css  soundcloud.md  youtube.md
media/soundcloud/: oeil-daryl-jamieson.md  (+2 more)
profile/: profile-en.md  profile-ja.md  style.css
snippets/: contact-info.html  repertoire.css  reviews.css
static/: notice.css
templates/: copyright.html  default.html  generic.html  media-list.html  pagination.html  photo-section.html  post-list.html  post.html  profile.html  sitemap.xml  soundcloud-embed.html  youtube-embed.html
(+30 files in other folders)
