name:               hakyll-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.14.*
                  , pandoc-types
                  , mtl
                  , text
                  , bytestring
                  , pandoc
                  , containers
                  , time
                  , filepath
                  , aeson
                  , unordered-containers
                  , scientific
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010
